--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/mocha 'spec/**/*.spec.ts' --opts mocha.opts",
+    "test": "node_modules/.bin/mocha 'src/lib/**/spec/**/*.spec.ts' --opts mocha.opts",
     "lint": "node_modules/.bin/tslint -c tslint.json -p tsconfig.json",
     "prebuild": "npm run lint",
     "build": "node_modules/.bin/tsc",
@@ -37,6 +37,7 @@
     "@babel/core": "^7.7.2",
     "@types/bluebird": "^3.5.28",
     "@types/body-parser": "^1.17.1",
+    "@types/chai": "^4.2.4",
     "@types/compression": "^1.0.1",
     "@types/dotenv": "^8.2.0",
     "@types/errorhandler": "0.0.32",
@@ -47,6 +48,20 @@
     "@types/morgan": "^1.7.37",
     "@types/ramda": "^0.26.33",
     "@types/universal-analytics": "^0.4.3",
+    "babel-polyfill": "^6.26.0",
+    "chai": "^4.2.0",
+    "es6-shim": "^0.35.5",
+    "karma": "^4.2.0",
+    "karma-chrome-launcher": "^3.0.0",
+    "karma-cli": "^2.0.0",
+    "karma-coverage": "^1.1.2",
+    "karma-global-preprocessor": "0.0.2",
+    "karma-jasmine": "^2.0.1",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-typescript": "^4.1.1",
+    "mocha": "^6.2.2",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.1",
