--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-typescript": "^4.1.1",
     "mocha": "^6.2.2",
+    "mocha-junit-reporter": "^1.23.1",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.1",
