Added client application

--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/mocha 'src/lib/**/spec/**/*.spec.ts' --opts mocha.opts",
+    "test": "node_modules/.bin/mocha 'spec/**/*.spec.ts' --opts mocha.opts",
     "lint": "node_modules/.bin/tslint -c tslint.json -p tsconfig.json",
     "prebuild": "npm run lint",
-    "build": "node_modules/.bin/tsc",
+    "build": "npm run client:build && node_modules/.bin/tsc",
     "postinstall": "npm run build",
     "server": "node dist/server.js",
-    "start": "npm run server && npm run server",
+    "start": "npm run server",
     "watch": "node_modules/.bin/nodemon",
     "heroku:log": "heroku logs -a hall --tail",
     "heroku:push": "git push https://heroku:abee4578-ec40-4e9a-9597-17381eccab25@git.heroku.com/hall.git master",
@@ -23,41 +23,52 @@
     "bluebird": "^3.7.1",
     "canvas": "^2.6.0",
     "compression": "^1.7.4",
+    "crossroads": "^0.12.2",
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "flyd": "^0.2.8",
+    "hasher": "^1.2.0",
+    "jquery": "^3.4.1",
     "lusca": "^1.6.1",
     "morgan": "^1.9.1",
     "pug": "^2.0.4",
     "ramda": "^0.26.1",
+    "scaleapp": "^0.4.4",
     "snabbdom": "^0.7.3",
     "universal-analytics": "^0.4.20",
     "yaml": "^1.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
-    "@types/bluebird": "^3.5.28",
+    "@babel/preset-env": "^7.7.1",
+    "@types/bluebird": "^3.5.29",
     "@types/body-parser": "^1.17.1",
     "@types/chai": "^4.2.4",
     "@types/compression": "^1.0.1",
+    "@types/crossroads": "0.0.30",
     "@types/dotenv": "^8.2.0",
     "@types/errorhandler": "0.0.32",
     "@types/express": "^4.17.2",
     "@types/express-session": "^1.15.15",
+    "@types/hasher": "0.0.31",
+    "@types/jquery": "^3.3.31",
     "@types/lusca": "^1.6.1",
     "@types/mocha": "^5.2.7",
     "@types/morgan": "^1.7.37",
     "@types/ramda": "^0.26.33",
     "@types/universal-analytics": "^0.4.3",
     "@types/yaml": "^1.2.0",
+    "babel-loader": "^8.0.6",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "babel-polyfill": "^6.26.0",
     "chai": "^4.2.0",
     "es6-shim": "^0.35.5",
-    "karma": "^4.2.0",
-    "karma-chrome-launcher": "^3.0.0",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-cli": "^2.0.0",
-    "karma-coverage": "^1.1.2",
+    "karma-coverage": "^2.0.1",
     "karma-global-preprocessor": "0.0.2",
     "karma-jasmine": "^2.0.1",
     "karma-mocha": "^1.3.0",
@@ -67,8 +78,11 @@
     "mocha": "^6.2.2",
     "mocha-junit-reporter": "^1.23.1",
     "ts-loader": "^6.2.1",
-    "ts-node": "^8.4.1",
+    "ts-node": "^8.5.0",
     "tslint": "^5.20.1",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   }
 }
