--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "flyd": "^0.2.8",
     "hasher": "^1.2.0",
     "jquery": "^3.4.1",
+    "js-yaml": "^3.13.1",
     "lusca": "^1.6.1",
     "morgan": "^1.9.1",
     "pug": "^2.0.4",
